--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -3,6 +3,7 @@ import os
 import platform
 import sys
 import shutil
+import re
 from socket import gethostname
 
 import MantidBuild
@@ -99,8 +100,17 @@ else:
 	    libDirList.append(poco_path+'/lib/Linux/i686')
 	else :
 	    libDirList.append(poco_path+'/lib')
-	cflags.append(['-O0','-g'])
-	env.Append(LINKFLAGS=['-g'])
+	cflags.append(['-g'])            ## PLEASE DO NOT MIX - -O0 and -g UNLESS DEBUGGUNG OPTIMIZATION ISSUES.
+	f=os.popen('pkg-config --cflags gsl')
+	flags=re.sub('\n','',f.readline())
+	if (len(flags)>1):
+		cflags.append([flags])
+	f.close()
+	f=os.popen('pkg-config --libs gsl')
+	flags=re.sub('\n','',f.readline())
+	lpts=re.split("\s+",flags)
+	lpts.append('-g')
+	env.Append(LINKFLAGS=lpts)
 
 #GET INCLUDE PATHS FOR OTHER PARTS OF MANTID
 dirpath=os.listdir(uppath)
