re #68 All workspace and algorithm pointers changed to shared pointers.
Typedefs have been created for each workspace type and should be used!
eg. Workspace_sptr for Workspace

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -225,6 +225,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\SaveCSVTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LoadRaw\vms_convert.h"
 				>
 			</File>
