re #84 Performance improvements to Triple Iterator PlusTest benchmark achieved in 1.0s on My PC.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -178,6 +178,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\BoostPythonWrapper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FrameworkManager.cpp"
 				>
 			</File>
