--- a/Code/Mantid/Main/Main.vcproj
+++ b/Code/Mantid/Main/Main.vcproj
@@ -161,7 +161,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\benchmark.cpp"
+				RelativePath=".\Benchmark.cpp"
 				>
 			</File>
 			<File
@@ -174,6 +174,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\Benchmark.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
