--- a/Code/Mantid/Main/SConscript
+++ b/Code/Mantid/Main/SConscript
@@ -17,18 +17,19 @@ libList = env['MYLIBLIST']
 libDirList = env['MYLIBDIRLIST']
 
 
-main_obj = env.Object('Main.cpp')
+#GET LIST OF CPPS
+codeFolder = os.path.abspath('.')
+listCpps = MantidBuild.getCPPFiles(codeFolder)
 
 myenv_dynamic = env.Clone()
 myenv_dynamic.Append(LIBS=libList)
 myenv_dynamic.Append(LIBPATH=libDirList)
 myenv_dynamic.Append(LIBPATH='#Bin/Shared')
-myenv_dynamic.Program('main',main_obj)
-
+myenv_dynamic.Program('main',listCpps)
 
 myenv_static = env.Clone()
 myenv_static.Append(LIBS=libList)
 myenv_static.Append(LIBPATH=libDirList)
 myenv_static.Append(LIBPATH='#Bin/Static')
 #myenv_static.Append(LINKFLAGS=['-static'])
-myenv_static.Program('main_static', main_obj)
+myenv_static.Program('main_static', listCpps)
