re #84 removed scons warning

--- a/Code/Mantid/Main/SConscript
+++ b/Code/Mantid/Main/SConscript
@@ -27,9 +27,9 @@ myenv_dynamic.Append(LIBPATH=libDirList)
 myenv_dynamic.Append(LIBPATH='#Bin/Shared')
 myenv_dynamic.Program('main',listCpps)
 
-myenv_static = env.Clone()
-myenv_static.Append(LIBS=libList)
-myenv_static.Append(LIBPATH=libDirList)
-myenv_static.Append(LIBPATH='#Bin/Static')
+#myenv_static = env.Clone()
+#myenv_static.Append(LIBS=libList)
+#myenv_static.Append(LIBPATH=libDirList)
+#myenv_static.Append(LIBPATH='#Bin/Static')
 #myenv_static.Append(LINKFLAGS=['-static'])
-myenv_static.Program('main_static', listCpps)
+#myenv_static.Program('main_static', listCpps)
