--- a/Code/Mantid/API/test/Mantid.properties
+++ b/Code/Mantid/API/test/Mantid.properties
@@ -1,7 +1,7 @@
 #framework configuration
 mantid.legs = 6
 
-#logging configuartion
+#logging configuration
 logging.loggers.root.level = information
 logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
@@ -9,3 +9,5 @@ logging.channels.fileChannel.path = KernelTest.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 
+#Plugin configuration
+plugins.directory = ../../Bin/Shared
