Add in initial LoadNeXus Algorithm files. Refs #76.

--- a/Code/Mantid/DataHandling/SConscript
+++ b/Code/Mantid/DataHandling/SConscript
@@ -7,6 +7,7 @@ import MantidBuild
 codeFolder = os.path.abspath('./src')
 listCpps = MantidBuild.getCPPFiles(codeFolder) 
 listCpps.append(MantidBuild.getCPPFiles(codeFolder + '/LoadRaw'))
+listCpps.append(MantidBuild.getCPPFiles(codeFolder + '/LoadNeXus'))
 
 #Import environment
 Import('env')
