re #88 Calculation now performed through the errorHelper class
All errorhelper classes are currently defaulted to Gaussian in the Workspace class

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -186,6 +186,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GaussianErrorHelper.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Instrument.cpp"
 				>
 			</File>
@@ -244,7 +248,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAPI\GaussianErrorHelper.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAPI\IAlgorithm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\IErrorHelper.h"
 				>
 			</File>
 			<File
