--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -15,15 +15,12 @@ uppath=os.path.abspath('../')
 
 libList = []
 env = Environment(ENV=os.environ)
-#printn 'Configuting for ',env['PLATFORM']
-#
+
 boost_append=''
-if not env.GetOption('clean'): # do not re-reun checking on a "scons -c"
+if not env.GetOption('clean'): # do not re-rerun checking on a "scons -c"
     conf = Configure(env)
     if conf.CheckLib('boost_filesystem-gcc41', '_ZN5boost10filesystem6nativeERKSs') :
 	boost_append = '-gcc41'
-    if conf.CheckLib('NeXus', 'nxiopen_') :
-	libList.append('NeXus')
     env = conf.Finish()
 
 libDirList = [uppath,cwdpath ]
@@ -83,20 +80,14 @@ else:
 
 	print "CPPPATHS: ",cppPaths
 
-  	libList = ['python' + sys.version[0:3]]
-
-	#  	libList.append('MantidDataObjects')
-	#  	libList.append('MantidAPI')
-	#  	libList.append('MantidKernel')
-	#  	libList.append('MantidDataHandling')
-	#  	libList.append('MantidGeometry')
-
+  	libList.append('python' + sys.version[0:3])
   	libList.append('PocoUtil')
   	libList.append('PocoFoundation')
   	libList.append('PocoXML')
   	libList.append('boost_python'+boost_append)
   	libList.append('boost_filesystem'+boost_append)
   	libList.append('boost_regex'+boost_append)
+	libList.append('NeXus')
 
         if os.path.isdir(poco_path + '/lib/Linux/i686') :
 	    libDirList.append(poco_path+'/lib/Linux/i686')
@@ -149,9 +140,8 @@ subProjs.append('API')
 subProjs.append('DataObjects')
 subProjs.append('Algorithms')
 subProjs.append('DataHandling')
+subProjs.append('PythonAPI')
 #subProjs.append('Services/SConscript')
-
-print libDirList
 
 # we want to link libraries in the reverse order we build them
 shared_libraries = []
@@ -165,7 +155,7 @@ for subproj in subProjs:
 	shared_libraries.insert(0,ret['shared'])
 	static_libraries.insert(0,ret['static'])
 	lib_list.insert(0,ret['libs'])
-	env.Replace(MYLIBLIST=orig_libs+lib_list)
+	env.Replace(MYLIBLIST=lib_list + orig_libs)
 
 env.Replace(SHARED_LIST=shared_libraries)
 env.Replace(STATIC_LIST=static_libraries)
