--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -140,7 +140,7 @@ subProjs.append('API')
 subProjs.append('DataObjects')
 subProjs.append('Algorithms')
 subProjs.append('DataHandling')
-subProjs.append('PythonAPI')
+#subProjs.append('PythonAPI')
 #subProjs.append('Services/SConscript')
 
 # we want to link libraries in the reverse order we build them
