Added methods to the Workspace Factory to deal with Managed Workspaces. Also added a clear() to the Analysis Data Service and added a call to that in FrameworkManager::clear(). Re #87.

--- a/Code/Mantid/DataObjects/test/Mantid.properties
+++ b/Code/Mantid/DataObjects/test/Mantid.properties
@@ -5,7 +5,7 @@ mantid.legs = 6
 logging.loggers.root.level = information
 logging.loggers.root.channel = fileChannel
 logging.channels.fileChannel.class = FileChannel
-logging.channels.fileChannel.path = KernelTest.log
+logging.channels.fileChannel.path = DataObjectsTest.log
 logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 
@@ -13,3 +13,4 @@ logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s
 plugins.directory = ../../Bin/Shared
 
 ManagedWorkspace.DataBlockSize = 4000
+ManagedWorkspace.FilePath = /nonsense/fdghjksdg
