re #91 Improvements to windows build, and disabling of static library build. This creates 100's of warnings on windows and will cause the dynamic algorithm registration to fail anyway.

--- a/Code/Mantid/API/SConscript
+++ b/Code/Mantid/API/SConscript
@@ -12,6 +12,6 @@ Import('env')
 
 #BUILD CODE
 shared = env.SharedLibrary('lib/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-static = env.StaticLibrary('libstatic/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
-retval = { 'shared': shared, 'static': static, 'libs': [ 'MantidAPI' ] }
+#static = env.StaticLibrary('libstatic/MantidAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'])
+retval = { 'shared': shared, 'static': shared, 'libs': [ 'MantidAPI' ] }
 Return('retval')
