--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -44,7 +44,7 @@ if os.name == 'nt':
 
 	for file in os.listdir(libDir):
         	if file.endswith('.dll'):
-			if (file.find('boost')==-1):
+			if not file.startswith('boost'):
 	                	libList.append(file.replace('.dll',''))
 
 #python and boost
@@ -71,7 +71,7 @@ print "THIRD_PARTY: ",third_party
 print "PYTHON_ROOT: ",python_path
 
 if os.name == 'nt':
-	cflags = ['-W3','/EHsc', '/MD', '/ZI', '/TP', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500', '/D_USE_MATH_DEFINES', '/D_SCL_SECURE_NO_WARNINGS']
+	cflags = ['-W3','/EHsc', '/MD', '/ZI', '/TP', '/DWIN32', '/D_WINDOWS', '/DPOCO_DLL', '/DWINVER=0x0500', '/D_USE_MATH_DEFINES', '/D_SCL_SECURE_NO_WARNINGS', '/wd4275']
 
 else:
 	cppPaths.append('/usr/include/python' + sys.version[0:3])
@@ -152,17 +152,18 @@ orig_libs = env['MYLIBLIST']
 for subproj in subProjs:
 	ret = SConscript(subproj+'/SConscript')
 	env.Install('Bin/Shared', ret['shared'])
-	env.Install('Bin/Static', ret['static'])
+	#env.Install('Bin/Static', ret['static'])
 	shared_libraries.insert(0,ret['shared'])
-	static_libraries.insert(0,ret['static'])
+	#static_libraries.insert(0,ret['static'])
 	lib_list.insert(0,ret['libs'])
 	env.Replace(MYLIBLIST=lib_list + orig_libs)
 
 env.Replace(SHARED_LIST=shared_libraries)
-env.Replace(STATIC_LIST=static_libraries)
+#env.Replace(STATIC_LIST=static_libraries)
 
 # main program
 ret = SConscript('Main/SConscript')
+env.Install('Bin/Shared', ret['shared'])
 
 # tests
 if os.name == 'nt':
